--- a/app/src/main/res/layout/activity_crear_aventura.xml
+++ b/app/src/main/res/layout/activity_crear_aventura.xml
@@ -20,8 +20,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        android:gravity="start"
+        android:hint="Escribe aquí tu historia"
         android:maxLength="255"
-        android:text="Crear Aventura"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
 
