--- a/app/src/main/res/layout/activity_crear_aventura.xml
+++ b/app/src/main/res/layout/activity_crear_aventura.xml
@@ -23,6 +23,7 @@
         android:gravity="start"
         android:hint="Escribe aquí tu historia"
         android:maxLength="255"
+        android:maxLines="10"
         android:textColor="@android:color/black"
         android:textSize="24sp" />
 
