--- a/app/src/main/res/layout/crear_dialogo_layout.xml
+++ b/app/src/main/res/layout/crear_dialogo_layout.xml
@@ -21,7 +21,8 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="@string/titulo_aventura_hint"
-        android:inputType="textNoSuggestions" />
+        android:inputType="textNoSuggestions"
+        android:maxLength="30" />
 
     <EditText
         android:id="@+id/AutorDLG"
@@ -33,7 +34,8 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
         android:hint="@string/autor"
-        android:inputType="textNoSuggestions" />
+        android:inputType="textNoSuggestions"
+        android:maxLength="10" />
 
     <Button
         android:id="@+id/empezarCrearBTN"
