--- a/app/src/main/res/layout/item_aventura.xml
+++ b/app/src/main/res/layout/item_aventura.xml
@@ -2,45 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/itemAventura"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Aventura"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/itemCreador"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Creador"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/itemAventura"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Aventura"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/itemVisitas"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Visitas"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/itemCreador"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Creador"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/itemNota"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Nota"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp" />
+        <TextView
+            android:id="@+id/itemNota"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Nota"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/itemVisitas"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Visitas"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"></LinearLayout>
 </LinearLayout>
