--- a/app/src/main/res/layout/activity_jugar.xml
+++ b/app/src/main/res/layout/activity_jugar.xml
@@ -8,18 +8,20 @@
     tools:context=".JugarActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/jugarIV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         app:srcCompat="@drawable/ic_launcher_background" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textoJugarTV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
-        tools:text="Aventura" />
+        tools:text="Aventura"
+        android:textSize="24sp"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,14 +32,15 @@
 
         <Button
             android:id="@+id/decision1JugarBTN"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginLeft="20dp"
             android:text="Decision 1" />
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
@@ -45,8 +48,9 @@
 
         <Button
             android:id="@+id/decision2JugarBTN"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginRight="20dp"
             android:text="Decision 2" />
     </LinearLayout>
