--- a/app/src/main/res/layout/activity_jugar.xml
+++ b/app/src/main/res/layout/activity_jugar.xml
@@ -11,8 +11,10 @@
         android:id="@+id/jugarIV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        android:layout_weight="3"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/ic_launcher_background"
+        />
 
     <TextView
         android:id="@+id/textoJugarTV"
