interface para el callback de firebase

--- a/app/src/main/res/layout/fragment_aventuras_local.xml
+++ b/app/src/main/res/layout/fragment_aventuras_local.xml
@@ -8,12 +8,6 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aventuras Local" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,7 +55,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAventura"
+        android:id="@+id/recyclerAventuraLocal"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
