--- a/app/src/main/res/layout/fragment_aventuras_web.xml
+++ b/app/src/main/res/layout/fragment_aventuras_web.xml
@@ -6,12 +6,6 @@
     android:orientation="vertical"
     tools:context=".Fragments.FragmentAventurasWeb">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Aventuras Web" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,7 +53,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAventura"
+        android:id="@+id/recyclerAventuraWeb"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
