--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
 
 
     <RelativeLayout
+        android:id = "@+id/layoutPrincipal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4">
