--- a/app/src/main/res/layout/confirmar_dialog.xml
+++ b/app/src/main/res/layout/confirmar_dialog.xml
@@ -22,8 +22,8 @@
         android:layout_margin="20dp"
         android:gravity="center"
         android:text="¿Seguro?"
-        android:textColor="@color/design_default_color_error"
-        android:textSize="30sp" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
