--- a/app/src/main/res/layout/filtrar_dialogo_layout.xml
+++ b/app/src/main/res/layout/filtrar_dialogo_layout.xml
@@ -44,6 +44,12 @@
         android:hint="@string/autor"
         android:inputType="textNoSuggestions" />
 
+    <CheckBox
+        android:id="@+id/publicadosCHKBX"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Solo ver los no publicados" />
+
     <Button
         android:id="@+id/aceptarBTN_filtrar"
         android:layout_width="wrap_content"
