--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.5"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Vive Tu Aventura"
+        android:text="Aventura"
         android:textColor="@color/colorAccent"
         android:textSize="36sp" />
 
