--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewPortada"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
@@ -20,7 +20,7 @@
         android:textSize="36sp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewPortada"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
