--- a/app/src/main/res/layout/item_aventura.xml
+++ b/app/src/main/res/layout/item_aventura.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/fondo_item_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
