--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:background="#1db995"
             android:elevation="6dp"
+            app:tabBackground="@drawable/tab_color_selector"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             ></com.google.android.material.tabs.TabLayout>
