--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,15 +9,33 @@
     tools:context=".MainActivity">
 
 
-    <TextView
-        android:id="@+id/textViewPortada"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="Aventura"
-        android:textColor="@color/colorAccent"
-        android:textSize="36sp" />
+        android:layout_weight="0.5">
+
+        <TextView
+            android:id="@+id/textViewPortada"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="Aventura"
+            android:textColor="@color/colorAccent"
+            android:textSize="36sp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/infoFloatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:clickable="true"
+            android:scaleType="fitCenter"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
+            app:srcCompat="@android:drawable/ic_menu_help" />
+
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/imageViewPortada"
@@ -29,7 +47,7 @@
 
 
     <RelativeLayout
-        android:id = "@+id/layoutPrincipal"
+        android:id="@+id/layoutPrincipal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4">
@@ -40,35 +58,46 @@
             android:layout_height="wrap_content"
             android:background="#1db995"
             android:elevation="6dp"
-            app:tabBackground="@drawable/tab_color_selector"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            ></com.google.android.material.tabs.TabLayout>
+            app:tabBackground="@drawable/tab_color_selector"></com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tabLayout"
-            />
+            android:layout_below="@id/tabLayout" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/crearAventuraBTN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:clickable="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@android:drawable/ic_menu_add" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/filtrarAventurasAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:clickable="true"
+            android:scaleType="fitCenter"
             app:srcCompat="@android:drawable/ic_menu_search" />
     </RelativeLayout>
 
