--- a/app/src/main/res/drawable/unselected.xml
+++ b/app/src/main/res/drawable/unselected.xml
@@ -9,7 +9,7 @@
             android:innerRadius="0dp"
             android:useLevel="false">
 
-            <solid android:color="@color/negro"/>
+            <solid android:color="@color/tab_background_unselected"/>
 
 
         </shape>
