--- a/app/src/main/res/layout/activity_jugar.xml
+++ b/app/src/main/res/layout/activity_jugar.xml
@@ -25,6 +25,7 @@
             android:id="@+id/textoJugarTV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fontFamily="@font/schoolbell"
             android:textSize="24sp"
             tools:text="Aventura" />
 
@@ -60,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_weight="1"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 1" />
 
         <TextView
@@ -67,6 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Decide que haces" />
 
@@ -76,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 2" />
     </LinearLayout>
 </LinearLayout>
