--- a/app/src/main/res/layout/crear_dialogo_layout.xml
+++ b/app/src/main/res/layout/crear_dialogo_layout.xml
@@ -16,11 +16,11 @@
         android:id="@+id/tituloDialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text = "Texto Dialogo"
-        android:textSize = "18sp"
-        android:textColor = "#F44336"
-        android:layout_gravity = "center"
-        />
+        android:layout_gravity="center"
+        android:fontFamily="@font/schoolbell"
+        android:text="Texto Dialogo"
+        android:textColor="#F44336"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/nombreAventuraDLG"
@@ -30,6 +30,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
+        android:fontFamily="@font/schoolbell"
         android:hint="@string/titulo_aventura_hint"
         android:inputType="textNoSuggestions"
         android:maxLength="30" />
@@ -42,7 +43,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/schoolbell"
         android:hint="@string/autor"
         android:inputType="textNoSuggestions"
         android:maxLength="10" />
@@ -58,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Cancelar" />
 
@@ -66,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Aceptar" />
     </LinearLayout>
