--- a/app/src/main/res/layout/activity_crear_aventura.xml
+++ b/app/src/main/res/layout/activity_crear_aventura.xml
@@ -80,6 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
+        android:fontFamily="@font/schoolbell"
         android:gravity="start"
         android:hint="Escribe aquí tu historia"
         android:maxLength="255"
@@ -100,6 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_weight="3"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 1" />
 
         <Button
@@ -108,6 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
             android:layout_weight="3"
+            android:fontFamily="@font/schoolbell"
             android:text="Decision 2" />
 
         <ImageButton
