--- a/app/src/main/res/layout/confirmar_dialog.xml
+++ b/app/src/main/res/layout/confirmar_dialog.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:fontFamily="@font/schoolbell"
         android:gravity="center"
         android:text="¿Seguro?"
         android:textColor="@color/colorPrimaryDark"
@@ -37,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Cancelar" />
 
@@ -46,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Aceptar" />
     </LinearLayout>
