--- a/app/src/main/res/layout/filtrar_dialogo_layout.xml
+++ b/app/src/main/res/layout/filtrar_dialogo_layout.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:fontFamily="@font/schoolbell"
         android:text="Introduce el título o autor que quieras encontrar:"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
@@ -29,6 +30,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
+        android:fontFamily="@font/schoolbell"
         android:hint="@string/titulo_aventura_hint"
         android:inputType="textNoSuggestions" />
 
@@ -40,7 +42,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif"
+        android:fontFamily="@font/schoolbell"
         android:hint="@string/autor"
         android:inputType="textNoSuggestions" />
 
@@ -48,6 +50,7 @@
         android:id="@+id/publicadosCHKBX"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/schoolbell"
         android:text="Solo ver los no publicados" />
 
     <Button
@@ -55,6 +58,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/schoolbell"
         android:gravity="center_horizontal|center_vertical"
         android:text="Aceptar" />
 
