--- a/app/src/main/res/layout/fragment_aventuras_local.xml
+++ b/app/src/main/res/layout/fragment_aventuras_local.xml
@@ -19,9 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="5"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Aventura"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@color/azul_oscuro" />
 
         <TextView
             android:id="@+id/textView3"
@@ -29,9 +30,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="3"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Creador"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@color/azul_oscuro" />
 
         <TextView
             android:id="@+id/textView4"
@@ -39,9 +41,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Visitas"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@color/azul_oscuro" />
 
         <TextView
             android:id="@+id/textView5"
@@ -49,9 +52,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center"
             android:text="Nota"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@color/azul_oscuro" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
