--- a/app/src/main/res/layout/item_aventura.xml
+++ b/app/src/main/res/layout/item_aventura.xml
@@ -15,9 +15,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Aventura"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/azul_oscuro"
             android:textSize="24sp" />
 
         <TextView
@@ -25,9 +26,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Creador"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/azul_oscuro"
             android:textSize="24sp" />
 
         <TextView
@@ -35,9 +37,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Visitas"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/azul_oscuro"
             android:textSize="24sp" />
 
         <TextView
@@ -45,9 +48,10 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:fontFamily="@font/schoolbell"
             android:gravity="center_horizontal|center_vertical"
             android:text="Nota"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/azul_oscuro"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -55,6 +59,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/celeste"
         android:orientation="horizontal"></LinearLayout>
 </LinearLayout>
