--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
   <color name="azul_oscuro">#212953</color>
     <color name="tab_background_unselected">#505050</color>
     <color name="tab_background_selected">#43A4CF</color>
+  <color name="celeste">#90CFEC</color>
+  <color name="amarillo">#FFFCDC</color>
 </resources>
