--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,13 @@
 
   <style name="NumberPickerText">
     <item name="android:textSize">36sp</item>
+    <item name="android:fontFamily">@font/schoolbell</item>
   </style>
+
+  <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
+    <item name="android:fontFamily">@font/schoolbell</item>
+    <item name="android:textSize">24dp</item>
+  </style>
+
 
 </resources>
