--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+    <item name="popupMenuStyle">@style/PopupMenu</item>
   </style>
 
   <style name="NumberPickerText">
@@ -16,6 +17,11 @@
   <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
     <item name="android:fontFamily">@font/schoolbell</item>
     <item name="android:textSize">24dp</item>
+  </style>
+
+  <style name="PopupMenu" parent="Widget.AppCompat.PopupMenu">
+    <item name="android:popupBackground">@color/azul_oscuro</item>
+
   </style>
 
 
