--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,24 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5">
+        android:layout_weight="2">
+
+        <ImageView
+            android:id="@+id/imageViewPortada"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/libreta_cortada" />
 
         <TextView
             android:id="@+id/textViewPortada"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center_horizontal|center_vertical"
-            android:text="Aventura"
+            android:text="Aventuras"
             android:textColor="@color/azul_oscuro"
             android:textSize="36sp" />
 
@@ -38,14 +46,6 @@
 
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/imageViewPortada"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:scaleType="centerCrop"
-        app:srcCompat="@drawable/brujula" />
-
 
     <RelativeLayout
         android:id="@+id/layoutPrincipal"
@@ -59,10 +59,11 @@
             android:layout_height="wrap_content"
             android:background="#1db995"
             android:elevation="6dp"
-            app:tabTextAppearance="@style/tab_text"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:tabBackground="@drawable/tab_color_selector"></com.google.android.material.tabs.TabLayout>
+            app:tabBackground="@drawable/tab_color_selector"
+            app:tabIndicatorColor="@color/celeste"
+            app:tabTextAppearance="@style/tab_text"></com.google.android.material.tabs.TabLayout>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
