--- a/app/src/main/res/layout/pedir_texto_dialog.xml
+++ b/app/src/main/res/layout/pedir_texto_dialog.xml
@@ -6,11 +6,10 @@
     <ImageView
         android:id="@+id/titulo_img_header"
         android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:background="#FFFFBB33"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
         android:scaleType="center"
-        android:src="@drawable/brujula" />
+        android:src="@drawable/nombre_app" />
 
     <EditText
         android:id="@+id/textoDescisionDLG"
