--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
+            android:background="#34FFFFFF"
             android:fontFamily="@font/special_elite"
             android:gravity="center_horizontal|center_vertical"
             android:text="Aventuras"
