--- a/app/src/main/res/layout/activity_presentacion.xml
+++ b/app/src/main/res/layout/activity_presentacion.xml
@@ -42,7 +42,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/schoolbell"
+        android:fontFamily="@font/special_elite"
         android:text="Atrás"
         android:textColor="#FFEB3B"
         android:textSize="18dp"
@@ -58,7 +58,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/schoolbell"
+        android:fontFamily="@font/special_elite"
         android:text="Siguiente"
         android:textColor="#FFEB3B"
         android:textSize="18dp" />
