--- a/app/src/main/res/layout/dialogo_fin_jugar.xml
+++ b/app/src/main/res/layout/dialogo_fin_jugar.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:fontFamily="@font/schoolbell"
+        android:fontFamily="@font/special_elite"
         android:gravity="center"
         android:text="¡Esta historia acaba aquí. Vuelve a intentarlo!"
         android:textColor="@color/azul_oscuro"
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center_horizontal|center_vertical"
             android:text="Empezar de nuevo" />
 
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center_horizontal|center_vertical"
             android:text="Salir" />
     </LinearLayout>
