--- a/app/src/main/res/layout/fragment_aventuras_local.xml
+++ b/app/src/main/res/layout/fragment_aventuras_local.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="5"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center"
             android:text="Aventura"
             android:textColor="@color/azul_oscuro" />
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="3"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center"
             android:text="Creador"
             android:textColor="@color/azul_oscuro" />
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center"
             android:text="Visitas"
             android:textColor="@color/azul_oscuro" />
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="2"
-            android:fontFamily="@font/schoolbell"
+            android:fontFamily="@font/special_elite"
             android:gravity="center"
             android:text="Nota"
             android:textColor="@color/azul_oscuro" />
